package cn.beepower.domain.message;

option optimize_for = LITE_RUNTIME;

option java_package = "cn.beepower.domain.message";

message Payload {
	optional bytes  value = 1;

	optional bool   test_flag = 10 [default = false];
	optional bool 	raw_flag = 11 [default = false];
	optional string className  = 13 [default = ""];
	optional string clientId  = 14 [default = ""];
	optional int64  messageId = 15 [default = 0];
}

message BeeMessage {
	enum MessageType {
		PUBLISH = 0;
		SUBSCRIBE = 1;
		UNSUBSCRIBE = 2;
	}

	optional string  topic = 1;
	optional Payload payload = 2;	

	optional MessageType message_type = 5 [default = PUBLISH];
	optional int32 qos = 6 [default = 0];
	optional bool  retain_flag = 7 [default = false];
}

message Items {
	repeated int32 i = 1;
	repeated int64 l = 2;
	repeated float f = 3;
	repeated double d = 4;
	repeated bool b = 5;
	repeated string s = 6;
	repeated bytes bs = 7;
}

message TLV {
	optional string t = 1;
	optional bytes v = 2;
}

message Series {
	optional string dbName = 1;
	optional string mapName = 2;
	optional TLV property = 5;
	optional string keyType = 12;
	optional string valueType = 13;
	optional Items keys = 14;
	optional Items values = 15;
}

message QueryParam {
	optional string dbName = 1;
	optional string mapName = 2;
	optional TLV fromKey = 5;
	optional bool fromInclusive = 6[default = true];
	optional TLV toKey = 7;
	optional bool toInclusive = 8[default = false];
	optional int32 itemNumber = 9[default = -1];
	optional bool ascendingOrder = 10[default = true];
}